Add check back date, modify main color

--- a/ragna-coming-soon-site/styles.css
+++ b/ragna-coming-soon-site/styles.css
@@ -64,7 +64,7 @@ a {
   letter-spacing: -6.7px;
   text-transform: uppercase;
   padding: 0 16px;
-  background: #A43A8F;
+  background: #99C941;
 }
 
 .header {
