--- a/ragna-coming-soon-site/styles.css
+++ b/ragna-coming-soon-site/styles.css
@@ -6,13 +6,12 @@ body {
   padding: 0;
   font-family: "Inter UI", sans-serif;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 .background {
   position: absolute;
   width: 100%;
-  background-image: linear-gradient(-180deg, #000000 0%, #200835 100%);
   overflow: hidden;
   z-index: 1;
   /* Make the rubber band scroll not show empty white space */
@@ -60,11 +59,9 @@ a {
 
 .title {
   font-weight: bolder;
-  color: #020103;
-  letter-spacing: -6.7px;
+  color: #613EA3;
   text-transform: uppercase;
   padding: 0 16px;
-  background: #99C941;
 }
 
 .header {
