--- a/docs/assets/stylesheet.css
+++ b/docs/assets/stylesheet.css
@@ -1,12 +1,13 @@
 /* TODO: Update based on new brand guidelines */
 
 :root {
-    --md-primary-fg-color: #df5538;
-    --md-accent-fg-color: #3c8d89;
-  }
+  --md-primary-fg-color: #df5538;
+  --md-accent-fg-color: #3c8d89;
+}
 
-.md-header, .md-footer {
-    background-color: #1f2636;
+.md-header,
+.md-footer {
+  background-color: #1f2636;
 }
 
 .icon {
