--- a/ragna/deploy/_api/templates/index.html
+++ b/ragna/deploy/_api/templates/index.html
@@ -4,7 +4,21 @@
     <meta charset="utf-8" />
     <title>Ragna</title>
     <link rel="icon" type="image/x-icon" href="/static/images/ragna_logo.svg" />
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <script
       src="https://unpkg.com/htmx.org@1.9.10"
       integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
@@ -17,30 +31,36 @@
     ></script>
   </head>
   <body>
-    <script>
-      document.body.addEventListener("htmx:configRequest", (event) => {
-        event.detail.path = `/ui${event.detail.path}`;
-      });
-    </script>
-    <button
-      hx-get="/chats"
-      hx-trigger="click"
-      hx-target="#messages-foo"
-      hx-swap="beforeend"
-    >
-      Click Me!
-    </button>
-    <div id="messages-foo"></div>
-    <form hx-post="/messages" hx-target="#results-box">
-      <input type="text" name="prompt" placeholder="Ask a question" />
-      <input type="submit" value="Send" />
-    </form>
-    <div id="results-box"></div>
-    <div
-      hx-ext="sse"
-      sse-connect="/ui/event-source"
-      sse-swap="message"
-      hx-swap="innerHTML"
-    ></div>
+    <div class="container-xxl vh-100 overflow-hidden">
+      <div class="row m-2 justify-content-center">
+        <div class="d-flex flex-column">
+          <div class="p-3 bg-primary text-light">
+            chat-feed loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
+            loremasdasdddddddddddddddddddddddddd+dadafwsafafcverfacas
+            loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacasloremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
+            loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
+            loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
+          </div>
+          <div class="d-flex align-items-center p-3 gap-3 bg-danger">
+            <form>
+              <input type="text" class="form-control" placeholder="Ask a question" />
+              <button type="button" class="btn btn-primary">
+                <i class="bi bi-arrow-right-short"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--    <script>-->
+    <!--      document.body.addEventListener("htmx:configRequest", (event) => {-->
+    <!--        event.detail.path = `/ui${event.detail.path}`;-->
+    <!--      });-->
+    <!--    </script>-->
+    <!--    <form hx-post="/answer" hx-target="#chat-feed" hx-swap="beforeend">-->
+    <!--      <input type="text" name="prompt" placeholder="Ask a question" />-->
+    <!--      <input type="submit" value="Send" />-->
+    <!--    </form>-->
+    <!--    <div id="chat-feed" hx-ext="sse" sse-connect="/ui/events"></div>-->
   </body>
 </html>
