--- a/ragna/deploy/_api/templates/index.html
+++ b/ragna/deploy/_api/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Ragna</title>
     <link rel="icon" type="image/x-icon" href="/static/images/ragna_logo.svg" />
+    <!-- Bootstrap https://getbootstrap.com -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,6 +20,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <!-- htmx https://htmx.org -->
     <script
       src="https://unpkg.com/htmx.org@1.9.10"
       integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
@@ -29,38 +31,38 @@
       integrity="sha384-jlVlI/i5K5APUIz8cxowC1/FsCEZgsrg126wue89Np9N75pQdAzqkYYP+jsUi43W"
       crossorigin="anonymous"
     ></script>
+    <script>
+      document.body.addEventListener("htmx:configRequest", (event) => {
+        event.detail.path = `/ui${event.detail.path}`;
+      });
+    </script>
   </head>
   <body>
-    <div class="container-xxl vh-100 overflow-hidden">
-      <div class="row m-2 justify-content-center">
-        <div class="d-flex flex-column">
-          <div class="p-3 bg-primary text-light">
-            chat-feed loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
-            loremasdasdddddddddddddddddddddddddd+dadafwsafafcverfacas
-            loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacasloremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
-            loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
-            loremasdasdddddddddddddddddddddddddddddddddasdadafwsafafcverfacas
-          </div>
-          <div class="d-flex align-items-center p-3 gap-3 bg-danger">
-            <form>
-              <input type="text" class="form-control" placeholder="Ask a question" />
-              <button type="button" class="btn btn-primary">
-                <i class="bi bi-arrow-right-short"></i>
-              </button>
-            </form>
-          </div>
-        </div>
+    <div class="container-xxl vh-100 d-flex flex-column overflow-hidden bg-primary">
+      <div
+        id="chat-feed"
+        class="row flex-fill p-3 bg-danger"
+        hx-ext="sse"
+        sse-connect="/ui/events"
+      >
+        foamsda,sac
       </div>
+      <form
+        class="row d-flex flex-row p-3 bg-secondary"
+        hx-post="/ui/answer"
+        hx-target="#chat-feed"
+        hx-swap="beforeend"
+      >
+        <input
+          type="text"
+          name="prompt"
+          class="form-control flex-grow-1"
+          placeholder="Ask a question"
+        />
+        <button type="submit" class="btn btn-primary">
+          <i class="bi bi-arrow-right-short"></i>
+        </button>
+      </form>
     </div>
-    <!--    <script>-->
-    <!--      document.body.addEventListener("htmx:configRequest", (event) => {-->
-    <!--        event.detail.path = `/ui${event.detail.path}`;-->
-    <!--      });-->
-    <!--    </script>-->
-    <!--    <form hx-post="/answer" hx-target="#chat-feed" hx-swap="beforeend">-->
-    <!--      <input type="text" name="prompt" placeholder="Ask a question" />-->
-    <!--      <input type="submit" value="Send" />-->
-    <!--    </form>-->
-    <!--    <div id="chat-feed" hx-ext="sse" sse-connect="/ui/events"></div>-->
   </body>
 </html>
