--- a/ragna/deploy/_ui/css/modal_configuration/select.css
+++ b/ragna/deploy/_ui/css/modal_configuration/select.css
@@ -1,7 +1,13 @@
 :host(.metadata-filter-key),
+:host(.metadata-filter-value) {
+  max-width: 38%;
+  min-width: 38%;
+  height: 30px;
+}
+
 :host(.metadata-filter-operator) {
-  max-width: 30%;
-  min-width: 30%;
+  max-width: 12%;
+  min-width: 12%;
   height: 30px;
 }
 
