Fix #506 : Fix value selector for IN and NOT_IN

--- a/ragna/deploy/_ui/css/modal_configuration/row.css
+++ b/ragna/deploy/_ui/css/modal_configuration/row.css
@@ -1,3 +1,8 @@
 :host(.modal_configuration_upload_row) {
   margin-bottom: 20px;
 }
+
+:host(.metadata-filter-row) {
+  background-color: lightsalmon;
+  overflow: visible;
+}
